--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Rain</title>
+		<title>NCVPRIPG-2024</title>
 
 		<!-- meta -->
 		<meta charset="UTF-8">
@@ -44,7 +44,7 @@
 					        <span class="sr-only">Toggle navigation</span>
 					        <i class="fa fa-bars"></i>
 					      </button>
-					      <a class="navbar-brand" href="#">Rain</a>
+					      <a class="navbar-brand" href="#">NCVPRIPG-2024</a>
 					    </div>
 
 					    <!-- Collect the nav links, forms, and other content for toggling -->
