--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
 
 				<section id="starting">
 					<div class="text-center starting-text wow animated zoomInDown">
-						<h2>Welcome to A-Z Application Service</h2>
-						<h1 class="rene">Smart App Design</h1>
+						<h1 class="rene">NCVPRIPG-2024</h1>
+						<h2>The 9th National Conference on Computer Vision, Pattern Recognition, Image Processing and Graphics</h2>
+						
 						<a href="#" class="bttn apple-store btn btn-lg">
 							<img src="img/apple.png" alt="apple">
 							<p>DOWNLOAD FROM</p>
