--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<h1 class="rene">NCVPRIPG-2024</h1>
 						<h2>The 9th National Conference on Computer Vision, Pattern Recognition, Image Processing and Graphics</h2>
 						
-						<a href="#" class="bttn apple-store btn btn-lg">
+						<!--<a href="#" class="bttn apple-store btn btn-lg">
 							<img src="img/apple.png" alt="apple">
 							<p>DOWNLOAD FROM</p>
 							<h6>APPLE STORE</h6>
@@ -80,7 +80,7 @@
 							<img src="img/play.png" alt="play">
 							<p>DOWNLOAD FROM</p>
 							<h6>GOOGLE PLAY</h6>
-						</a>
+						</a>-->
 					</div>
 				</section>
 				<div id="bottom" class="bottom text-center">
